@@ -240,6 +240,9 @@ Students: added parental emails to data update history, to allow for emailing of
 Students: add filter to data update history to show only non-compliant students, or to show all students.
 	Edited file /modules/Students/report_students_dataUpdaterHistory.php
 
+Students: add numbering to data update history for easy counting of students.
+	Edited file /modules/Students/report_students_dataUpdaterHistory.php
+
 	
 
 v6.0.00
